objects/ccpt__Topic__c.object
<CustomObject>
    <fields>
        <fullName>ccpt__IsArchived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccpt__Last_Activity__c</fullName>
        <description>Determines the last time that this topic or its events were updated</description>
        <formula>IF(ISBLANK(ccpt__Last_Updated__c), LastModifiedDate, IF(ccpt__Last_Updated__c &gt; LastModifiedDate, ccpt__Last_Updated__c, LastModifiedDate))</formula>
        <label>Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccpt__Last_Updated__c</fullName>
        <label>Last Updated</label>
        <summarizedField>ccpt__Topic_Event__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>ccpt__Topic_Event__c.ccpt__Topic__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ccpt__Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Topic</label>
        <referenceTo>ccpt__Topic__c</referenceTo>
        <relationshipLabel>Topics</relationshipLabel>
        <relationshipName>Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Topic</label>
    <nameField>
        <label>Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>